# wherestorage

./: .gitignore  Cargo.toml  journal.md  release.sh
.cargo/: config.toml
src/: cli.rs  main.rs  prelude.rs  utils.rs
src/download/: mod.rs  request.headers.json
src/speedtest_net/: download.rs  error.rs  fs_utils.rs  mod.rs  net_utils.rs  prelude.rs  request.rs  upload.rs  utils.rs
src/speedtest_net/fs_utils/: epoch_delta.rs  fd.rs  mod.rs
src/upload/: mod.rs  payload.rs
