[package]
name = "wherestorage"
version = "0.1.0"
edition = "2021"
authors = ["DaBigBlob <hman@hman.io>"]
description = "Storing things where we aren't supposed to"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
clap-num = "1.1.1"
md5 = "0.7.0"
openssl = { version = "0.10.65", features = ["vendored"] }
reqwest = { version = "0.12.5", features = ["native-tls", "http2", "native-tls-alpn", "charset", "gzip", "brotli", "deflate", "json", "zstd"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
